# adventure

./: .gitignore  .travis.yml  AUTHORS  ChangeLog.md  Dockerfile  Makefile  Makefile.am  README  README.md  advdec.h  advdef.h  advent.c  advent.desktop  advent1.h  advent2.h  advent4.h  advword.h  configure.ac  database.c  english.c  itverb.c  proto.h  turn.c  verb.c
.github/workflows/: build.yml  container.yml  coverity.yml  release.yml
debian/: .gitignore  changelog  control  copyright  postinst  prerm  rules  watch
doc/: AUTHORS  Makefile.am  Makefile.orig  READ.ME  advent.6  advent.txt  cheat.txt
src/: .gitignore  Makefile.am  advcave.h  advdec.h  advdef.h  advent.c  advent.desktop.in  advent.h  advent0.c  advent2.h  advent3.h  advent4.h  advent4.txt  advtext.h  advword.h  database.c  english.c  itverb.c  proto.h  turn.c  verb.c
unused/: advent1.txt
