AM_CFLAGS          = -W -Wall -Wextra
AM_CPPFLAGS        = -I$(top_srcdir)

bin_PROGRAMS       = advent
noinst_PROGRAMS    = bootstrap

advent_SOURCES     = advent.c database.c english.c itverb.c turn.c verb.c   \
		     advcave.h advdec.h advdef.h advent.h advword.h proto.h \
		     advent1.h advent2.h advent3.h advent4.h advtext.h

bootstrap_SOURCES  = advent0.c
